chapters/chapter8/workload-permissive-peer-authn.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "apigateway"
  namespace: "istioinaction"
spec:
  selector:
    matchLabels:
      app: apigateway 
  mtls:
    mode: PERMISSIVE
